Implemented delete and validation on "Create"

--- a/LitigationSoftware/LSWebApp/Views/Shared/_ITHeadDocumentsUploader.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/Shared/_ITHeadDocumentsUploader.cshtml
@@ -48,9 +48,15 @@
                                                 @document.FileName
                                             </td>
                                             <td>
-                                                <a href=" @Url.Content("~/ITReturnDetailsDocumentsUpload/" + document.FilePath)"
+                                                <a href="@Url.Content("~/ITReturnDetailsDocumentsUpload/" + document.FilePath)"
                                                    target="_blank">
                                                     View
+                                                </a>
+                                                &nbsp;
+                                                <a href="#"
+                                                   title="click to delete the document"
+                                                   onclick="deleteITReturnDetailsDocument(@(document.Id), '@(document.FilePath)')">
+                                                    Delete
                                                 </a>
                                             </td>
                                         </tr>
