Added/Updated code for the IT return details documents display forms

--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ComplianceList.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ComplianceList.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Manage Compliances";
     //Layout = "~/Views/Shared/_LayoutDynemicMenu.cshtml";
 }
-<h2>Manage compliances</h2>
+<h2>Manage Compliances</h2>
 <div>
     <form action="insertupdatecompliance" enctype="multipart/form-data" id="frmUpload" method="post">
         <table>
