--- a/LitigationSoftware/LSWebApp/Views/Shared/_Layout.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <a class="nav-link" href="@Url.Action("GetComplianceList","TaxReturn")">Compliances</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("GetITReturnDocuments","TaxReturn")">Documents</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
                     </li>
                 </ul>
