--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ExistingSectionWiseDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ExistingSectionWiseDetails.cshtml
@@ -1,52 +1,54 @@
 ﻿@model LSWebApp.Models.ITReturnDetailsListModel
 @using LSWebApp.Infrastructure;
+<style>
+    table, th, td {
+        border: 1px solid black;
+    }
+</style>
 <table class="table table-hover">
-  
-        <thead>
-            <tr>
-                <th>Category</th>
-                @foreach (var itsectiondetail in Model.ITReturnDetailsListObject)
+    <thead>
+        <tr>
+            <th>Category</th>
+            @foreach (var itsectiondetail in Model.ITReturnDetailsListObject)
                 {
-                    <th>@itsectiondetail.ITSectionCategoryDesc</th>
-                    @Html.Hidden(@itsectiondetail.ITSectionCategoryDesc, @itsectiondetail.ITSectionCategoryID)
+                <th>@itsectiondetail.ITSectionCategoryDesc</th>
+                @Html.Hidden(@itsectiondetail.ITSectionCategoryDesc, @itsectiondetail.ITSectionCategoryID)
                 }
-            </tr>
-            <tr>
-                <th>Section</th> 
-                @foreach (var itsectiondetail in Model.ITReturnDetailsListObject)
+        </tr>
+        <tr>
+            <th>Section</th>
+            @foreach (var itsectiondetail in Model.ITReturnDetailsListObject)
                 {
                 <th align="center">
-                    @*@itsectiondetail.ITSectionDescription*@
                     @Html.ActionLink(@itsectiondetail.ITSectionDescription, "GetITReturnDetails", "TaxReturn", new { AddedBy = itsectiondetail.AddedBy, CompanyID = Model.CompanyId, CompanyName = @itsectiondetail.CompanyName, FYAYID = Model.FYAYId, itsectionid = @itsectiondetail.ITSectionID, itreturnid = @itsectiondetail.Id,itsectioncategoryid = @itsectiondetail.ITSectionCategoryID }, null)
-                    @*@Html.HiddenFor(m => m.Id, itsectiondetail.Id)*@
                 </th>
                 }
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="table-active">
-                <td>Filling Date</td>
-                @foreach (var itsectiondetail in Model.ITReturnDetailsListObject)
+        </tr>
+    </thead>
+    <tbody>
+        <tr class="table-active">
+            <td>Filling Date</td>
+            @foreach (var itsectiondetail in Model.ITReturnDetailsListObject)
                 {
-                    <td>@itsectiondetail.ITReturnFillingDate.Value.ToShortDateString()</td>
+                <td>@itsectiondetail.ITReturnFillingDate.Value.ToShortDateString()</td>
                 }
-            </tr>
-            <tr class="table-active">
-                <td>Due Date</td>
-                @foreach (var itsectiondetail in Model.ITReturnDetailsListObject)
+        </tr>
+        <tr class="table-active">
+            <td>Due Date</td>
+            @foreach (var itsectiondetail in Model.ITReturnDetailsListObject)
                 {
-                    <td>@itsectiondetail.ITReturnDueDate.Value.ToShortDateString()</td>
+                <td>@itsectiondetail.ITReturnDueDate.Value.ToShortDateString()</td>
                 }
-            </tr>
-            <tr class="table-active">
-                <td>Income from House Property</td>
-                @foreach (var itsectiondetail in Model.ITReturnDetailsListObject)
-                {   
-                    <td>
-                        @Utilities.FormatNumber(itsectiondetail.HousePropIncome)
-                    </td>
+        </tr>
+        <tr class="table-active">
+            <td>Income from House Property</td>
+            @foreach (var itsectiondetail in Model.ITReturnDetailsListObject)
+                {
+                <td>
+                    @Utilities.FormatNumber(itsectiondetail.HousePropIncome)
+                </td>
                 }
-            </tr>
-        </tbody>
+        </tr>
+    </tbody>
 </table>
 
